# vitality

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md
benchmarks/: text_storage_bench.cpp
docs/: large-file-ui-followups.md  text-storage-invariants.md  unicode-current-state.md  unicode-roadmap.md
src/app/: main.cpp
src/buffer/: BufferLoadResult.h  BufferTypes.h  LineTextView.h  TextBuffer.cpp  TextBuffer.h  TextStorage.cpp  TextStorage.h
src/buffer/internal/: ImplicitTreapStorageCore.cpp  ImplicitTreapStorageCore.h
src/core/: CoreTypes.h  PositionConversions.h
src/file/: FilePath.cpp  FilePath.h
src/layout/: LayoutCursorOps.cpp  LayoutCursorOps.h  QtLineLayout.cpp  QtLineLayout.h
src/ui/: EditorNavigationModel.cpp  EditorNavigationModel.h  EditorScrollArea.cpp  EditorScrollArea.h  StatusBarText.cpp  StatusBarText.h  Utf8QtTextBridge.cpp  Utf8QtTextBridge.h  Utf8QtTextMapper.cpp  Utf8QtTextMapper.h
src/unicode/: UnicodeLineOps.cpp  UnicodeLineOps.h
tests/: TestHelpers.h
tests/property/: EditorNavigationModelPropertyTests.cpp  TextBufferPropertyTests.cpp  TextStorageEditPropertyTests.cpp  TextStoragePropertyTests.cpp
tests/unit/: CursorModelTypesTests.cpp  EditorNavigationModelTests.cpp  EditorScrollAreaTests.cpp  ImplicitTreapStorageCoreTests.cpp  LayoutCursorOpsTests.cpp  StatusBarTextTests.cpp  TextBufferTests.cpp  TextStorageTests.cpp  UnicodeDependencyTests.cpp  UnicodeLineOpsTests.cpp  Utf8QtTextMapperTests.cpp
